  - Fix minor potential authenticated object insertion vulnerability in changegroupperm
  - Fix minor potential uncleaned input vulnerability in siteprefs
  - Minor improvement to get_real_ip()

News v2.51.5
  - Fix unauthenticated SQL injection vulnerability with the default action

ModuleManager v2.1.6
  - Fix authenticated object insertion vulnerability in the installmodule action

FilePicker v1.0.4
  - Fix authenticated object insertion vulnerability

Version 2.2.9.1
-------------------------------
Core - General
  - fix to the CmsLayoutStylesheetQuery class
  - fix an edge case in the Database\Connection::DbTimeStamp() method

MicroTiny v2.2.4
  - Minor fix in error displays.

Phar Installer v1.3.7
  - Fix to edge case in step 3 where memory_limit is set to -1

Version 2.2.9 - Blow Me Down
-------------------------------
Core - General
  - PHP 7.2+ fixes.
  - Now do not call Module::InitializeAdmin() or Module::InitializeFrontend() if the module loading is being forced
    (as is the case sometimes within ModuleManager);
  - Minor changes and fixes to prevent warnings/notices in CLI based scripts
  - Improvements to the {browser_lang} plugin.
  - Fixes a bug in the CmsLayoutTemplateQuery class.
  - Fixes a bug with the name= parameter in the {cms_stylesheet} plugin.
  - Fixes a minor issue in system information (smarty compilecheck).
  - Fixes a minor issue with the tabIndex and accesskey fields in edit content.
  - Fixes issue in the CmsLayoutStylesheet class related to associating designs with new stylesheets.
  - Now check for an english language file first in module_custom/xxxxx/lang before a file for the current language.
  - Prevent false-positive hit for "multiple_webshells_0018" rule webserver virusscanner (https://github.com/Yara-Rules/rules/blob/master/Webshells/WShell_THOR_Webshells.yar#L4764).
  - Fixes a bug in ContentOperations::LoadAllContent() if the content list had a custom content type from a module that was unvavailable.